<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.phhagens.sumcalculator_itc162_classproject2.SumCalculator_itc162_classproject2_MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/projectTitle"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/projectTitle"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/topicTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/topicTitle"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/topicTitle"
        android:textAlignment="center"
        android:textColor="@android:color/holo_purple"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/labelNumber1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectTitle" />

    <TextView
        android:id="@+id/labelNumber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="29dp"
        android:text="@string/label_1st_number"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/labelNumber2"
        app:layout_constraintEnd_toStartOf="@+id/inputNumber1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topicTitle" />

    <TextView
        android:id="@+id/labelNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="66dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="25dp"
        android:text="@string/label_2nd_number"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/resetBtn"
        app:layout_constraintEnd_toStartOf="@+id/inputNumber2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelNumber1" />

    <EditText
        android:id="@+id/inputNumber1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/input_1st_number"
        android:inputType="number|numberDecimal"
        android:text="@string/input_1st_number"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/labelNumber1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelNumber1" />

    <EditText
        android:id="@+id/inputNumber2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:hint="@string/input_2nd_number"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/clickButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelNumber2" />

    <Button
        android:id="@+id/clickButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="onClick"
        android:text="@string/clickGetSum"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/labelNumber2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/showAnswer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="98dp"
        android:lineSpacingExtra="10sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetBtn" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:layout_marginStart="124dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="Clear"
        android:text="@string/reset"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/showAnswer"
        app:layout_constraintStart_toStartOf="@+id/clickButton"
        app:layout_constraintTop_toBottomOf="@+id/labelNumber2" tools:targetApi="lollipop" />

</android.support.constraint.ConstraintLayout>
